using UnityEngine;

public class FlareSystem : MonoBehaviour
{
    void SendFlare()
    {

    }

    void ReceiveFlare()
    {

    }
}
