using UnityEngine;

public class LeaderboardSystem : MonoBehaviour
{
    void SubmitScore()
    {

    }

    void DisplayScore()
    {

    }
}
