using UnityEngine;

public class NetworkManager : MonoBehaviour
{
    void HostGame()
    {

    }

    void JoinGame(string ipAddress)
    {
    }

    void SyncData()
    {
    }
}
