using UnityEngine;

public class PartyManager : MonoBehaviour
{
    void CreateParty()
    {

    }

    void AddPlayer()
    {

    }

    void RemovePlayer()
    {
    }
}
