using UnityEngine;
using UnityEngine.UIElements;

public class DebugOverlay : MonoBehaviour
{
    bool ExecuteCommand()
    {
        return true;
    }
}
